core/graph.h

struct Graph {
   struct hashtable* vertices;
};
struct ShortestPathTree {
   struct hashtable* vertices;
};
struct Vertex {
   int degree_out;
   int degree_in;
   ListNode* outgoing;
   ListNode* incoming;
   char* label;
    
   int deleted_neighbors;
} ;
struct SPTVertex {
   int degree_out;
   int degree_in;
   ListNode* outgoing;
   ListNode* incoming;
   char* label;
   State* state;
   int hop;
   Vertex *mirror;
} ;
struct Edge {
  Vertex* from;
  Vertex* to;
  EdgePayload* payload;
  int enabled;
} ;
Edge*
sptAddEdge( ShortestPathTree *self, char *from, char *to, EdgePayload *payload );
SPTVertex**
sptVertices( ShortestPathTree *self, long* num_vertices );
long
sptSize( ShortestPathTree* self );
Path *
sptPathRetro(Graph* g, char* origin_label);
//VERTEX FUNCTIONS

Vertex *
vNew( char* label ) ;
void
vDestroy(Vertex* self, int free_edge_payloads) ;
// TODO
//void
//vMark(Vertex* self) ;

Edge*
vLink(Vertex* self, Vertex* to, EdgePayload* payload) ;
Edge*
vSetParent( Vertex* self, Vertex* parent, EdgePayload* payload );
void
vRemoveOutEdgeRef( Vertex* self, Edge* todie );
void
vRemoveInEdgeRef( Vertex* self, Edge* todie );
char*
vGetLabel( Vertex* self );
int
vDegreeOut( Vertex* self );
int
vDegreeIn( Vertex* self );
//SPTVERTEX FUNCTIONS

SPTVertex *
sptvNew( Vertex* mirror, int hop ) ;
void
sptvDestroy(SPTVertex* self) ;
Edge*
sptvLink(SPTVertex* self, SPTVertex* to, EdgePayload* payload) ;
Edge*
sptvSetParent( SPTVertex* self, SPTVertex* parent, EdgePayload* payload );
void
sptvRemoveOutEdgeRef( SPTVertex* self, Edge* todie );
void
sptvRemoveInEdgeRef( SPTVertex* self, Edge* todie );
char*
sptvGetLabel( SPTVertex* self );
int
sptvDegreeOut( SPTVertex* self );
int
sptvDegreeIn( SPTVertex* self );
State*
sptvState( SPTVertex* self );
int
sptvHop( SPTVertex* self );
Edge*
sptvGetParent( SPTVertex* self );
Vertex*
sptvMirror( SPTVertex* self );
//EDGE FUNCTIONS

Edge*
eNew(Vertex* from, Vertex* to, EdgePayload* payload);
void
eDestroy(Edge *self, int destroy_payload) ;
// TODO
//void
//eMark(Edge *self) ;

State*
eWalk(Edge *self, State* state, WalkOptions* options) ;
State*
eWalkBack(Edge *self, State *state, WalkOptions* options) ;
Vertex*
eGetFrom(Edge *self);
Vertex*
eGetTo(Edge *self);
EdgePayload*
eGetPayload(Edge *self);
int
eGetEnabled(Edge *self);
void
eSetEnabled(Edge *self, int enabled);