java/src/main/java/org/graphserver/jna/GraphserverLibrary.java

	/**
	 * Original signature : <code>Edge* sptAddEdge(ShortestPathTree*, const char*, const char*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:113</i><br>
	 * @deprecated use the safer methods {@link #sptAddEdge(org.graphserver.jna.ShortestPathTree, java.lang.String, java.lang.String, org.graphserver.jna.EdgePayload)} and {@link #sptAddEdge(org.graphserver.jna.ShortestPathTree, com.sun.jna.Pointer, com.sun.jna.Pointer, org.graphserver.jna.EdgePayload)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.Edge sptAddEdge(org.graphserver.jna.ShortestPathTree this_, Pointer from, Pointer to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>Edge* sptAddEdge(ShortestPathTree*, const char*, const char*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:113</i>
	 */
	org.graphserver.jna.Edge sptAddEdge(org.graphserver.jna.ShortestPathTree this_, java.lang.String from, java.lang.String to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>SPTVertex** sptVertices(ShortestPathTree*, long*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:116</i>
	 */
	PointerByReference sptVertices(org.graphserver.jna.ShortestPathTree this_, NativeLongByReference num_vertices);
	/**
	 * Original signature : <code>sptSize(ShortestPathTree*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:119</i>
	 */
	int sptSize(org.graphserver.jna.ShortestPathTree this_);
	/**
	 * Original signature : <code>Path* sptPathRetro(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:122</i><br>
	 * @deprecated use the safer methods {@link #sptPathRetro(org.graphserver.jna.Graph, java.lang.String)} and {@link #sptPathRetro(org.graphserver.jna.Graph, com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	GraphserverLibrary.Path sptPathRetro(org.graphserver.jna.Graph g, Pointer origin_label);
	/**
	 * Original signature : <code>Path* sptPathRetro(Graph*, const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:122</i>
	 */
	GraphserverLibrary.Path sptPathRetro(org.graphserver.jna.Graph g, java.lang.String origin_label);
	/**
	 * Original signature : <code>Vertex* vNew(const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:127</i><br>
	 * @deprecated use the safer methods {@link #vNew(java.lang.String)} and {@link #vNew(com.sun.jna.Pointer)} instead
	 */
	@java.lang.Deprecated 
	org.graphserver.jna.Vertex vNew(Pointer label);
	/**
	 * Original signature : <code>Vertex* vNew(const char*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:127</i>
	 */
	org.graphserver.jna.Vertex vNew(java.lang.String label);
	/**
	 * Original signature : <code>void vDestroy(Vertex*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:130</i>
	 */
	void vDestroy(org.graphserver.jna.Vertex this_, int free_edge_payloads);
	/**
	 * Original signature : <code>Edge* vLink(Vertex*, Vertex*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:137</i>
	 */
	org.graphserver.jna.Edge vLink(org.graphserver.jna.Vertex this_, org.graphserver.jna.Vertex to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>Edge* vSetParent(Vertex*, Vertex*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:140</i>
	 */
	org.graphserver.jna.Edge vSetParent(org.graphserver.jna.Vertex this_, org.graphserver.jna.Vertex parent, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>void vRemoveOutEdgeRef(Vertex*, Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:149</i>
	 */
	void vRemoveOutEdgeRef(org.graphserver.jna.Vertex this_, org.graphserver.jna.Edge todie);
	/**
	 * Original signature : <code>void vRemoveInEdgeRef(Vertex*, Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:152</i>
	 */
	void vRemoveInEdgeRef(org.graphserver.jna.Vertex this_, org.graphserver.jna.Edge todie);
	/**
	 * Original signature : <code>char* vGetLabel(Vertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:155</i>
	 */
	java.lang.String vGetLabel(org.graphserver.jna.Vertex this_);
	/**
	 * Original signature : <code>int vDegreeOut(Vertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:158</i>
	 */
	int vDegreeOut(org.graphserver.jna.Vertex this_);
	/**
	 * Original signature : <code>int vDegreeIn(Vertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:161</i>
	 */
	int vDegreeIn(org.graphserver.jna.Vertex this_);
	/**
	 * Original signature : <code>SPTVertex* sptvNew(Vertex*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:166</i>
	 */
	org.graphserver.jna.SPTVertex sptvNew(org.graphserver.jna.Vertex mirror, int hop);
	/**
	 * Original signature : <code>void sptvDestroy(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:169</i>
	 */
	void sptvDestroy(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>Edge* sptvLink(SPTVertex*, SPTVertex*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:172</i>
	 */
	org.graphserver.jna.Edge sptvLink(org.graphserver.jna.SPTVertex this_, org.graphserver.jna.SPTVertex to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>Edge* sptvSetParent(SPTVertex*, SPTVertex*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:175</i>
	 */
	org.graphserver.jna.Edge sptvSetParent(org.graphserver.jna.SPTVertex this_, org.graphserver.jna.SPTVertex parent, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>void sptvRemoveOutEdgeRef(SPTVertex*, Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:184</i>
	 */
	void sptvRemoveOutEdgeRef(org.graphserver.jna.SPTVertex this_, org.graphserver.jna.Edge todie);
	/**
	 * Original signature : <code>void sptvRemoveInEdgeRef(SPTVertex*, Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:187</i>
	 */
	void sptvRemoveInEdgeRef(org.graphserver.jna.SPTVertex this_, org.graphserver.jna.Edge todie);
	/**
	 * Original signature : <code>char* sptvGetLabel(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:190</i>
	 */
	java.lang.String sptvGetLabel(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>int sptvDegreeOut(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:193</i>
	 */
	int sptvDegreeOut(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>int sptvDegreeIn(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:196</i>
	 */
	int sptvDegreeIn(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>State* sptvState(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:199</i>
	 */
	GraphserverLibrary.State sptvState(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>int sptvHop(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:202</i>
	 */
	int sptvHop(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>Edge* sptvGetParent(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:205</i>
	 */
	org.graphserver.jna.Edge sptvGetParent(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>Vertex* sptvMirror(SPTVertex*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:208</i>
	 */
	org.graphserver.jna.Vertex sptvMirror(org.graphserver.jna.SPTVertex this_);
	/**
	 * Original signature : <code>Edge* eNew(Vertex*, Vertex*, EdgePayload*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:213</i>
	 */
	org.graphserver.jna.Edge eNew(org.graphserver.jna.Vertex from, org.graphserver.jna.Vertex to, org.graphserver.jna.EdgePayload payload);
	/**
	 * Original signature : <code>void eDestroy(Edge*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:216</i>
	 */
	void eDestroy(org.graphserver.jna.Edge this_, int destroy_payload);
	/**
	 * Original signature : <code>State* eWalk(Edge*, State*, WalkOptions*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:223</i>
	 */
	GraphserverLibrary.State eWalk(org.graphserver.jna.Edge this_, GraphserverLibrary.State state, GraphserverLibrary.WalkOptions options);
	/**
	 * Original signature : <code>State* eWalkBack(Edge*, State*, WalkOptions*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:226</i>
	 */
	GraphserverLibrary.State eWalkBack(org.graphserver.jna.Edge this_, GraphserverLibrary.State state, GraphserverLibrary.WalkOptions options);
	/**
	 * Original signature : <code>Vertex* eGetFrom(Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:229</i>
	 */
	org.graphserver.jna.Vertex eGetFrom(org.graphserver.jna.Edge this_);
	/**
	 * Original signature : <code>Vertex* eGetTo(Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:232</i>
	 */
	org.graphserver.jna.Vertex eGetTo(org.graphserver.jna.Edge this_);
	/**
	 * Original signature : <code>EdgePayload* eGetPayload(Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:235</i>
	 */
	org.graphserver.jna.EdgePayload eGetPayload(org.graphserver.jna.Edge this_);
	/**
	 * Original signature : <code>int eGetEnabled(Edge*)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:238</i>
	 */
	int eGetEnabled(org.graphserver.jna.Edge this_);
	/**
	 * Original signature : <code>void eSetEnabled(Edge*, int)</code><br>
	 * <i>native declaration : /Users/kolohe/dev/graphserver/core/graph.h:241</i>
	 */
	void eSetEnabled(org.graphserver.jna.Edge this_, int enabled);
	/// Pointer to unknown (opaque) type
	public static class State extends PointerType {
		public State(Pointer address) {
			super(address);
		}
		public State() {
			super();
		}
	};
	/// Pointer to unknown (opaque) type
	public static class Heap extends PointerType {
		public Heap(Pointer address) {
			super(address);
		}
		public Heap() {
			super();
		}
	};
	/// Pointer to unknown (opaque) type
	public static class ListNode extends PointerType {
		public ListNode(Pointer address) {
			super(address);
		}
		public ListNode() {
			super();
		}
	};
	/// Pointer to unknown (opaque) type
	public static class hashtable extends PointerType {
		public hashtable(Pointer address) {
			super(address);
		}
		public hashtable() {
			super();
		}
	};
	/// Pointer to unknown (opaque) type
	public static class Path extends PointerType {
		public Path(Pointer address) {
			super(address);
		}
		public Path() {
			super();
		}
	};
	/// Pointer to unknown (opaque) type
	public static class WalkOptions extends PointerType {
		public WalkOptions(Pointer address) {
			super(address);
		}
		public WalkOptions() {
			super();
		}
	};
}
